--- a/html/views/overlays/interactive/index.html
+++ b/html/views/overlays/interactive/index.html
@@ -24,8 +24,10 @@
 							<div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div>
 						</div>
 					</div>
-					<div class="JammerBox ShowInJam Clock barBackgroundTop">
-						<div class="JammerName VerticalCenter Box" sbDisplay="LeadJammer,StarPass,Position(Jammer),Position(Pivot),Skater" sbModify="jammer"></div>
+					<div class="JammerWrapper">
+						<div class="JammerBox ShowInJam Clock barBackgroundTop">
+							<div class="JammerName VerticalCenter Box" sbDisplay="LeadJammer,StarPass,Position(Jammer),Position(Pivot),Skater" sbModify="jammer"></div>
+						</div>
 					</div>
 					</div>
 					<div class="Team2" sbContext="Team(2)">
@@ -35,7 +37,9 @@
 							<div class="Mini Box"><div class="JamScore" sbDisplay="JamScore"></div><div class="LeadJammer Lead">&#9733;</div></div>
 							<div class="DotTimeouts Box"><div class="Dot Timeout1"></div><div class="Dot Timeout2"></div><div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div></div>
 						</div>
-						<div class="JammerBox ShowInJam Clock barBackgroundBottom"><div class="JammerName" sbDisplay="LeadJammer,StarPass,Position(Jammer),Position(Pivot),Skater" sbModify="jammer"></div></div>
+						<div class="JammerWrapper">
+							<div class="JammerBox ShowInJam Clock barBackgroundBottom"><div class="JammerName" sbDisplay="LeadJammer,StarPass,Position(Jammer),Position(Pivot),Skater" sbModify="jammer"></div></div>
+						</div>
 					</div>
 			
 				</div>
@@ -49,8 +53,8 @@
 					</div>
 
 					<div class="Wrapper Clock SlideDown ShowInIntermission ShowInLineUp ShowInTimeout">
-						<div class="Box BigName ShowInIntermission Clock" sbDisplay="Setting(Intermission.PreGame), Setting(Intermission.Intermission), Setting(Intermission.Unofficial), Setting(Intermission.Official), OfficialScore, Clock(Intermission).Number, Clock(Intermission).MaximumNumber" sbModify="intermissionDisplay"></div>
 						<div class="Box BigName ShowInLineup ShowInTimeout Clock Description"><span sbDisplay="Clock(Lineup).Name, Clock(Lineup).Running, Clock(Timeout).Name, Clock(Timeout).Running, TimeoutOwner, OfficialReview, Team(1).Timeouts, Team(1).OfficialReviews, Team(2).Timeouts, Team(2).OfficialReviews" sbModify="smallDescriptionUpdate"></span></div> 
+						<div class="Box BigName ShowInIntermission Clock" sbDisplay="Setting(Intermission.PreGame), Setting(Intermission.Intermission), Setting(Intermission.Unofficial), Setting(Intermission.Official), OfficialScore, Clock(Intermission).Number, Clock(Intermission).MaximumNumber" sbModify="intermissionDisplay"></div>
 					</div>
 					
 					<div class="Wrapper Row BottomRow barBackgroundBottom">
@@ -76,7 +80,7 @@
 
 				<div class="PPJBox Wrapper PanelHideLeft OverlayPanel LargePanel AnimatedPanel">
 					<h1>Points Per Jam</h1>
-					<h4 class="htop" sbDisplay="AlternateName(overlay)" sbContext="Team(1)"></h4>	
+					<h4 class="htop" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h4>	
 					<div class="PPJContainer Wrapper">
 						<div class="Wrapper Team Team1">
 							<div class="Period Period1"></div><div class="Period Period2"></div>
@@ -85,19 +89,19 @@
 							<div class="Period Period1"></div><div class="Period Period2"></div>
 						</div>
 					</div>
-					<h4 class="hbottom" sbDisplay="AlternateName(overlay)" sbContext="Team(2)"></h4>	
+					<h4 class="hbottom" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h4>	
 				</div>
 
 
 				<div class="RosterTeam1 RosterTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
-					<h1 sbDisplay="AlternateName(overlay)" sbContext="Team(1)"></h1>	
+					<h1 sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h1>	
 					<h2>Team Roster</h2>
 					<div class="Wrapper Team Team1 SortBox">
 					</div>
 				</div>
 
 				<div class="RosterTeam2 RosterTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
-					<h1 sbDisplay="AlternateName(overlay)" sbContext="Team(2)"></h1>	
+					<h1 sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h1>	
 					<h2>Team Roster</h2>
 					<div class="Wrapper Team Team2 SortBox">
 					</div>
@@ -105,14 +109,14 @@
 
 				<div class="PenaltyTeam1 PenaltyTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<h1>Penalty Board</h1>
-					<h2 sbDisplay="AlternateName(overlay)" sbContext="Team(1)"></h2>	
+					<h2 sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h2>	
 					<div class="Wrapper Team Team1 SortBox">
 					</div>
 				</div>
 
 				<div class="PenaltyTeam2 PenaltyTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<h1>Penalty Board</h1>
-					<h2 sbDisplay="AlternateName(overlay)" sbContext="Team(2)"></h2>	
+					<h2 sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h2>	
 					<div class="Wrapper Team Team2 SortBox">
 					</div>
 				</div>
@@ -123,7 +127,7 @@
 				<div class="LowerThird Wrapper OverlayPanel AnimatedPanel PanelHideLeft">
 					<h4 class="Line1" sbDisplay="Custom.Overlay.LowerThird.Line1" /> <h5 class="Line2" sbDisplay="Custom.Overlay.LowerThird.Line2" />
 				</div>
-			</div>
+			</div,Name>
 
 	</div>
 
