--- a/html/views/overlays/interactive/stats.html
+++ b/html/views/overlays/interactive/stats.html
@@ -3,11 +3,18 @@
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
 		<script type="text/javascript" src="/json/WS.js"></script>
-		<script type="text/javascript" src="/views/standard/dataset.js"></script>
-		<script type="text/javascript" src="/views/standard/common.js"></script>
-		<script type="text/javascript" src="/views/standard/stats.js"></script>
+		<script type="text/javascript" src="dataset.js"></script>
+		<script type="text/javascript" src="statengine.js"></script>
 	</head>
 	<body>
 		Stats Framework Test
+
+		<table id="Jams">
+		<thead>
+		</thead>
+		<tbody>
+		</tbody>
+		</table>
+
 	</body>
 </html>
