--- a/html/views/overlays/interactive/index.html
+++ b/html/views/overlays/interactive/index.html
@@ -4,6 +4,7 @@
 		<script type="text/javascript" src="/json/core.js"></script>
 		<script type="text/javascript" src="/json/WS.js"></script>
 		<script type="text/javascript" src="/views/standard/common.js"></script>
+		<style title="jsStyle"></style>
 	</head>
 	<body>
 		<div id="sb" sbContext="ScoreBoard" class="JamScore StyleTraditional" data-setting="Custom.Overlay.ShowJammers">
@@ -13,6 +14,7 @@
 				<div data-setting="Custom.Overlay.Score" class="TeamBox AnimatedPanel PanelHideTop Wrapper">	
 					<div class="Team1" sbContext="Team(1)">	
 					<div class="Team Row Wrapper barBackgroundTop"> 
+						<div class="Indicator ColourTeam1 Box">&nbsp;</div>
 						<div class="Name  VerticalCenter Box" sbModify="nameUpdate" sbDisplay="Name,AlternateName(scoreboard)"></div>
 						<div class="Score VerticalCenter Box" sbDisplay="Score"></div>
 						<div class="Mini Box">
@@ -25,20 +27,21 @@
 						</div>
 					</div>
 					<div class="JammerWrapper">
-						<div class="JammerBox ShowInJam Clock">
+						<div class="JammerBox ShowInJam Clock ColourTeam1">
 							<div class="JammerName VerticalCenter Box" sbDisplay="LeadJammer,StarPass,Position(Jammer),Position(Pivot),Skater" sbModify="jammer"></div>
 						</div>
 					</div>
 					</div>
 					<div class="Team2" sbContext="Team(2)">
 						<div class="Team Row Wrapper barBackgroundBottom">
+							<div class="Indicator ColourTeam2 Box">&nbsp;</div>
 							<div class="Name Box" sbModify="nameUpdate" sbDisplay="Name,AlternateName(scoreboard)"></div>
 							<div class="Score Box" sbDisplay="Score"></div>
 							<div class="Mini Box"><div class="JamScore" sbDisplay="JamScore"></div><div class="LeadJammer Lead">&#9733;</div></div>
 							<div class="DotTimeouts Box"><div class="Dot Timeout1"></div><div class="Dot Timeout2"></div><div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div></div>
 						</div>
 						<div class="JammerWrapper">
-							<div class="JammerBox ShowInJam Clock"><div class="JammerName" sbDisplay="LeadJammer,StarPass,Position(Jammer),Position(Pivot),Skater" sbModify="jammer"></div></div>
+							<div class="JammerBox ShowInJam Clock ColourTeam2"><div class="JammerName" sbDisplay="LeadJammer,StarPass,Position(Jammer),Position(Pivot),Skater" sbModify="jammer"></div></div>
 						</div>
 					</div>
 			
@@ -76,7 +79,7 @@
 
 				<div class="PPJBox Wrapper PanelHideLeft OverlayPanel LargePanel AnimatedPanel">
 					<h1>Points Per Jam</h1>
-					<h4 class="htop" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h4>	
+					<h4 class="htop ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h4>	
 					<div class="PPJContainer Wrapper">
 						<div class="Wrapper Team Team1">
 							<div class="Period Period1"></div><div class="Period Period2"></div>
@@ -85,19 +88,19 @@
 							<div class="Period Period1"></div><div class="Period Period2"></div>
 						</div>
 					</div>
-					<h4 class="hbottom" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h4>	
+					<h4 class="hbottom ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h4>	
 				</div>
 
 
 				<div class="RosterTeam1 RosterTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
-					<h1 sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h1>	
+					<h1 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h1>	
 					<h2>Team Roster</h2>
 					<div class="Wrapper Team Team1 SortBox">
 					</div>
 				</div>
 
 				<div class="RosterTeam2 RosterTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
-					<h1 sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h1>	
+					<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h1>	
 					<h2>Team Roster</h2>
 					<div class="Wrapper Team Team2 SortBox">
 					</div>
@@ -105,7 +108,7 @@
 
 				<div class="PenaltyTeam1 PenaltyTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<h1>Penalty Board</h1>
-					<h2 sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h2>	
+					<h2 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h2>	
 					<div class="Wrapper Team Team1 SortBox">
 					</div>
 				</div>
